{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "916c5892-2e06-46ad-8916-29dea635857d",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "Button",
                    "id": "216fb92e-6624-442a-b075-85cc60616456",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Button",
                    "id": "860f5e34-0e28-4469-9148-ab57cad60261",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResetSkatePos",
                    "type": "Button",
                    "id": "f19c8f07-9ebf-45fb-9181-17f8ce10e125",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8375f266-10d9-4ca7-aa14-a2740db72dcd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b7bcc34-d7e6-4e6e-b677-2bb3ee5e5d1a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc1568fb-258a-44fc-802f-ef2ebfd0f3a0",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetSkatePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}